--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,9 +10,9 @@
   <h2>Spring Cloud Gateway to Jürgen's Minikube-Cloud - running on :5500</h2>
   <p>Choose your microservice:</p>
   <ol>
-    <li><a href="./recipe/2">recipe-service</a></li>
-    <li><a href="./hello">greeting-service</a></li>
-    <li><a href="./code">code-service</a></li>
+    <li><a href="./recipe/1">recipe-service</a></li>
+    <li><a href="./code">code-sharing-service</a></li>
+    <li><a href="./quiz">quiz-service</a></li>
   </ol>
 </main>
 </body>
