Access to register endpoint
via html page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Spring Cloud Gateway</title>
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
 <main>
   <h2>Spring Cloud Gateway to Jürgen's Minikube-Cloud - running on :5500</h2>
   <p>Choose your microservice:</p>
   <ol>
-    <li><a href="./recipe/1">recipe-service</a></li>
+    <li><a href="./recipe">recipe-service</a></li>
     <li><a href="./code">code-sharing-service</a></li>
     <li><a href="./quiz">quiz-service</a></li>
   </ol>
